tests/Rules/data/db-shape/valid/blockstudio/users/db.php
<?php

return [
    'storage' => 'table',
    'fields' => [
        'name' => ['type' => 'string', 'required' => true],
    ],
];
