tests/Rules/data/db-shape/invalid-type/blockstudio/users/db.php
<?php

return [
    'storage' => 'table',
    'fields' => [
        'name' => ['type' => 'nonexistent', 'required' => true],
    ],
];
